k8s/sentiment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: jelling
spec:
  selector:
    app: sentiment
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
